tests/03-typecheck/13-branch.stack
func invalid_if (int) (string) in
    if
        "yes"
    else
        0
    fi
end
